--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.password = akhil
 
 
 spring.jpa.show-sql = true
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL57Dialect
 
 jwt.secret = ShoppingMart
